diagweave/tests/ui/derive/from_requires_single_field.rs
use diagweave::Error;

#[derive(Debug, Error)]
enum BadFrom {
    #[display("bad from")]
    Multi(#[from] std::io::Error, u32),
}

fn main() {}